# autosalon

./: autosalon-8d839-firebase-adminsdk-y7e34-be7a9fb896.json  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt
app/: config.py  main.py
app/database/: crud.py  models.py  schemas.py
app/funcs/: utils.py
app/routers/: auth.py  sports.py
